--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.544.0",
-    "next": "15.5.0",
+    "next": "^16.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
@@ -57,8 +57,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
